ganv (1.6.0) stable;

  * Add API to specify module port order.
  * Add support for PDF and PS export.
  * Add support for beveled box corners.
  * Add support for edges that do not constrain the layout.
  * Dampen sprung layout energy over time to prevent oscillation.
  * Distinguish edge color from port color slighly.
  * Fix compilation with --no-fdgl (patch from Vlad Glagolev).
  * Fix crash when destroying canvas.
  * Fix port position on modules with embedded widgets.
  * Fix positioning of embedded widgets when changing layout.
  * Fix size of vertical flow modules.
  * Fix unexpected node jumping when dragging new connections.
  * Fix various minor visual alignment/sizing issues.
  * Highlight connected edges on port hover.
  * Improve appearance of graphs with circle nodes.
  * Improve text rendering at high zoom.
  * Improve update performance.
  * Preserve selection for quickly making several connections.
  * Upgrade to waf 2.0.19

 -- David Robillard <d@drobilla.net>  Thu, 09 Apr 2020 11:45:01 +0000

ganv (1.4.2) stable;

  * Fix bug where edges would not update when nodes are moved after the canvas
    is cleared (fix stuck connections in Patchage after refresh).
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 22:24:33 +0000

ganv (1.4.0) stable;

  * Add Connection::set_curved()
  * Add ability to select connections by their handles, either individually or
    in groups with rect select.
  * Add ability to select connections directly
  * Add font size API
  * Adjust padding and placement to precisely fit text
  * Begin using library and pkg-config names suitable for parallel
    installation.  This version of flowcanvas is flowcanvas-1 and is NOT
    compatible with previous versions
  * Clean up API and improve documentation.
  * Clean up API/ABI by hiding private implementations.
  * Dramatically increase performance by rendering text manually rather than
    using the truly awful Gnome::Canvas::Text.