@@ -1,3 +1,9 @@
+ganv (1.7.0) unstable;
+
+  * Expand canvas automatically to fit nodes
+
+ -- David Robillard <d@drobilla.net>  Thu, 30 Jul 2020 19:13:38 +0000
+
 ganv (1.6.0) stable;
 
   * Add API to specify module port order.
